--- a/compose/docker-filebeat.yml
+++ b/compose/docker-filebeat.yml
@@ -19,7 +19,7 @@
         ipv4_address: ${ES_NET}.9
     user: root
     volumes:
-      # - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/hosts/hosts:/etc/hosts
       - ./certs:/usr/share/filebeat/certs
       - ./extras/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
