--- a/extras/metricbeat/metricbeat/beat-xpack.yml
+++ b/extras/metricbeat/metricbeat/beat-xpack.yml
@@ -5,7 +5,7 @@
   xpack.enabled: true
   period: 10s
   hosts: 
-    - apm-server.${APP_NET}:5066
+    # - apm-server.${APP_NET}:5066
     - heartbeat.${APP_NET}:5066
     - metricbeat.${APP_NET}:5066
     - filebeat.${APP_NET}:5066
