--- a/extras/metricbeat/metricbeat/elasticsearch-xpack.yml
+++ b/extras/metricbeat/metricbeat/elasticsearch-xpack.yml
@@ -11,4 +11,4 @@
   ssl:
     enabled: true
     certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-    verification_mode: "${VERIFICATION_MODE}"
+    # verification_mode: "${VERIFICATION_MODE}"
