--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -29,7 +29,7 @@
       # metrics
       # - 9600:9600
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      # - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/hosts/hosts:/etc/hosts
       - ./certs/ca/ca.crt:/usr/share/logstash/config/certs/ca.crt
       - ./certs/logstash/logstash.crt:/usr/share/logstash/config/certs/logstash.crt
@@ -41,9 +41,7 @@
       - ./extras/logstash/syslog-error.conf:/usr/share/logstash/pipeline/syslog-error.conf
       - logstash:/usr/share/logstash
     environment:
-      - APP_HOST=${APP_HOST}
       - APP_NET=${ELASTIC_NETWORK}
-      - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTIC_SSL_CERTIFICATEAUTHORITY=/usr/share/logstash/config/certs/ca.crt
       - ES_NET=${ES_NET}
