--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -5,6 +5,14 @@ input {
   }
 }
 
+filter {
+  if [service][type] == "traefik" {
+    json {
+      source => "message"
+      remove_field => ["msg", "time"]
+    }
+}
+
 # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
 # https://www.elastic.co/guide/en/logstash/current/use-ingest-pipelines.html
 output {
@@ -12,6 +20,7 @@ output {
     hosts => ["https://es01.${APP_NET}:9200"]
     data_stream => true
     ssl => true
+    ssl_certificate_verification => false
     cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
     user => "${LOGSTASH_USERNAME}"
     password => "${LOGSTASH_PASSWORD}"
