--- a/extras/logstash/syslog-error.conf
+++ b/extras/logstash/syslog-error.conf
@@ -7,9 +7,9 @@ input {
   tcp {
     port => 5001
   }
-#   udp {
-#     port => 5001
-#   }
+  udp {
+    port => 5001
+  }
 }
 
 filter {
@@ -29,6 +29,7 @@ output {
     hosts => ["https://es01.${APP_NET}:9200"]
     data_stream => true
     ssl => true
+    ssl_certificate_verification => false    
     cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
     user => "${LOGSTASH_USERNAME}"
     password => "${LOGSTASH_PASSWORD}"
