--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -9,7 +9,7 @@ filter {
   if [service][type] == "traefik" {
     json {
       source => "message"
-      remove_field => ["msg", "time"]
+      remove_field => ["time"]
     }
 }
 
