--- a/extras/metricbeat/metricbeat/system.yml
+++ b/extras/metricbeat/metricbeat/system.yml
@@ -22,6 +22,7 @@
     by_memory: 5   # include top 5 processes by memory
 # Configure the mount point of the host’s filesystem for use in monitoring a host from within a container
 # hostfs: "/hostfs"
+  hostfs: "/"
 
 - module: system
   period: 1m
