--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -28,13 +28,32 @@ filter {
 # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
 # https://www.elastic.co/guide/en/logstash/current/use-ingest-pipelines.html
 output {
-  elasticsearch {
-    hosts => ["https://es01.${APP_NET}:9200"]
-    data_stream => true
-    ssl => true
-    ssl_certificate_verification => false
-    cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
-    user => "${LOGSTASH_USERNAME}"
-    password => "${LOGSTASH_PASSWORD}"
+  if [@metadata][pipeline] {
+    elasticsearch {
+      hosts => ["https://es01.${APP_NET}:9200"]
+      manage_template => true
+      index => "%{[@metadata][beat]}-%{[@metadata][version]}"
+      action => "create"
+      pipeline => "%{[@metadata][pipeline]}"
+      data_stream => true
+      ssl => true
+      ssl_certificate_verification => false
+      cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
+      user => "${LOGSTASH_USERNAME}"
+      password => "${LOGSTASH_PASSWORD}"
+    }
+  } else {
+    elasticsearch {
+      hosts => ["https://es01.${APP_NET}:9200"]
+      manage_template => true
+      index => "%{[@metadata][beat]}-%{[@metadata][version]}"
+      action => "create"
+      data_stream => true
+      ssl => true
+      ssl_certificate_verification => false
+      cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
+      user => "${LOGSTASH_USERNAME}"
+      password => "${LOGSTASH_PASSWORD}"
+    }
   }
 }
