--- a/.env.dist
+++ b/.env.dist
@@ -29,6 +29,8 @@ COMPOSE_HTTP_TIMEOUT=180
 ES_NET=192.168.100
 ES_IP=192.168.1.151
 
+TRAEFIK_LOG=/usr/share/filebeat/elogs/traefik/traefik.log
+
 VERIFICATION_MODE=certificate
 ELASTIC_AGENT_TAGS=platel,${STAGE}
 CLUSTER_NAME=es-cluster
