--- a/compose/docker-filebeat.yml
+++ b/compose/docker-filebeat.yml
@@ -40,5 +40,6 @@
       - ES_NET=${ES_NET}
       - LOGSTASH_SERVER_CERT=/usr/share/filebeat/certs/logstash/logstash.crt
       - LOGSTASH_SERVER_CERT_KEY=/usr/share/filebeat/certs/logstash/logstash.key
+      - TRAEFIK_LOG=${TRAEFIK_LOG}
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
 
