--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -13,6 +13,12 @@ filebeat.config:
     path: ${path.config}/modules.d/*.yml
     reload.enabled: false
 
+filebeat.inputs:
+  - type: filestream
+    id: traefik.error
+    paths:
+      - ${TRAEFIK_LOG}
+
 output:
   logstash:
     enabled: true
