--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -18,11 +18,13 @@ filebeat.inputs:
     id: traefik.error
     paths:
       - ${TRAEFIK_LOG}
+    tags: ["${APP_HOST}-filebeat", "${APP_ID}"]
 
 output:
   logstash:
     enabled: true
     hosts: ["logstash.${APP_NET}:5044"]
+    index: "logs"
    
   # for /filebeat -e setup --dashboards:
   # elasticsearch:
@@ -34,6 +36,7 @@ output:
   #     enabled: true
   #     certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
   #     verification_mode: "${VERIFICATION_MODE}"
+  #   index: "logs"
 
 setup:      
   ilm.overwrite: true
