--- a/compose/docker-head.yml
+++ b/compose/docker-head.yml
@@ -16,6 +16,11 @@ networks:
   elastic:
     external: true
     name: ${ELASTIC_NETWORK}
+    # driver: bridge
+    # ipam:
+    #   config:
+    #     - subnet: ${ES_NET}.0/24
+
 
 services:
 
