--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -14,13 +14,14 @@ filter {
       mutate { uppercase => [ "level" ] }
       date {
         match => ["time", "ISO8601"]
+        timezone => "UTC"
         target => "time"
       }
       ruby {
         code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))'
       }
       mutate {
-        replace => { "message" => "%{time} [%{level}] %{msg}" }
+        replace => { "message" => "%{time} %{[app][id]} [%{level}] %{msg}" }
       }
       mutate { lowercase => [ "level" ] }
       mutate {
@@ -40,6 +41,7 @@ filter {
       }
       date {
         match => ["time", "ISO8601"]
+        timezone => "UTC"
         target => "time"
       }
       ruby {
@@ -47,11 +49,11 @@ filter {
       }
       if [RouterName] =~ /.+/ {
         mutate {
-          replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
+          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] %{host.name} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
         }
       } else {
         mutate {
-          replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] %{host.name} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
         }
       }
       mutate {
