--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -49,11 +49,11 @@ filter {
       }
       if [RouterName] =~ /.+/ {
         mutate {
-          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] %{host.name} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
+          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] - %{RouterName}: %{RequestMethod} %{RequestPath}" }
         }
       } else {
         mutate {
-          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] %{host.name} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
         }
       }
       mutate {
