--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -22,7 +22,8 @@ filter {
       mutate { gsub => [ "msg", "\\n", " " ] }
       mutate { uppercase => [ "level" ] }
       mutate {
-        replace => { "message" => "%{time} %{[app][id]} [%{level}] %{msg}" }
+        replace => { "message" => "%{time} [%{level}] %{msg}" }
+#        replace => { "message" => "%{time} %{[app][id]} [%{level}] %{msg}" }
       }
       mutate { lowercase => [ "level" ] }
       mutate {
@@ -50,11 +51,13 @@ filter {
       }
       if [RouterName] =~ /.+/ {
         mutate {
-          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] - %{RouterName}: %{RequestMethod} %{RequestPath}" }
+          replace => { "message" => "%{time} [%{DownstreamStatus}] - %{RouterName}: %{RequestMethod} %{RequestPath}" }
+#          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] - %{RouterName}: %{RequestMethod} %{RequestPath}" }
         }
       } else {
         mutate {
-          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+          replace => { "message" => "%{time} [%{DownstreamStatus}] - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+#          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
         }
       }
       mutate {
