--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -23,7 +23,7 @@ filter {
       mutate { uppercase => [ "level" ] }
       mutate {
         replace => { "message" => "%{time} [%{level}] %{msg}" }
-#        replace => { "message" => "%{time} %{[app][id]} [%{level}] %{msg}" }
+#        replace => { "message" => "%{[app][id]} %{time} [%{level}] %{msg}" }
       }
       mutate { lowercase => [ "level" ] }
       mutate {
@@ -52,12 +52,12 @@ filter {
       if [RouterName] =~ /.+/ {
         mutate {
           replace => { "message" => "%{time} [%{DownstreamStatus}] - %{RouterName}: %{RequestMethod} %{RequestPath}" }
-#          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] - %{RouterName}: %{RequestMethod} %{RequestPath}" }
+#          replace => { "message" => %{[app][id]} "%{time} [%{DownstreamStatus}] - %{RouterName}: %{RequestMethod} %{RequestPath}" }
         }
       } else {
         mutate {
           replace => { "message" => "%{time} [%{DownstreamStatus}] - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
-#          replace => { "message" => "%{time} %{[app][id]} [%{DownstreamStatus}] - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+#          replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
         }
       }
       mutate {
