--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -28,7 +28,6 @@ filter {
       mutate { lowercase => [ "level" ] }
       mutate {
         add_field => {
-          "[ecs][version]" => "${STACK_VERSION}"
           "[event][kind]" => "event"
           "[event][category]" => "log"
           "[event][dataset]" => "traefik.error"
@@ -61,13 +60,13 @@ filter {
         }
       }
       mutate {
-        add_field => {
-          "[ecs][version]" => "${STACK_VERSION}"
-          "[event][kind]" => "event"
-          "[event][category]" => "log"
-        }
         remove_field => ["time", "msg"]
       }
+    }
+  }
+  mutate {
+    add_field => {
+      "[ecs][version]" => "${STACK_VERSION}"
     }
   }
 }
