--- a/.env.dist
+++ b/.env.dist
@@ -30,7 +30,7 @@ COMPOSE_HTTP_TIMEOUT=180
 ES_NET=192.168.100
 ES_IP=192.168.1.151
 
-TRAEFIK_LOG=/usr/share/filebeat/elogs/traefik/traefik.log
+TRAEFIK_LOG=traefik.log
 
 VERIFICATION_MODE=certificate
 ELASTIC_AGENT_TAGS=platel,${STAGE}
