--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -2,83 +2,94 @@
 input {
   beats {
     port => 5044
+    ssl => true
+    ssl_certificate_authorities => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
+    ssl_certificate => "/usr/share/logstash/config/certs/logstash.crt"
+    ssl_key => "/usr/share/logstash/config/certs/logstash.key"
+    ssl_verify_mode => "force_peer"
   }
 }
 
 filter {
-  if [input][type] == "filestream" {
-    if [log][file][path] == "${TRAEFIK_LOG}" {
-      kv {
-        remove_char_value => "\""
-      }
-      date {
-        match => ["time", "ISO8601"]
-        timezone => "UTC"
-        target => "time"
-      }
-      ruby {
-        code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))'
-      }
-      mutate { gsub => [ "msg", "\\n", " " ] }
-      mutate { uppercase => [ "level" ] }
+  if [service][type] == "traefik" {
+    json {
+      source => "message"
+    }
+    date {
+      match => ["time", "ISO8601"]
+      timezone => "UTC"
+      target => "time"
+    }
+    ruby {
+      code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))'
+    }
+    if [RouterName] =~ /.+/ {
       mutate {
-        replace => { "message" => "%{time} [%{level}] %{msg}" }
-#        replace => { "message" => "%{[app][id]} %{time} [%{level}] %{msg}" }
+        replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
+#         replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
       }
-      mutate { lowercase => [ "level" ] }
+    } else {
       mutate {
-        add_field => {
-          "[event][kind]" => "event"
-          "[event][category]" => "log"
-          "[event][dataset]" => "traefik.error"
-        }
-        remove_field => ["time", "msg"]
+        replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+#         replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
       }
     }
-  } else if [service][type] == "traefik" {
-    if [fileset][name] == "access" {
-      json {
-        source => "message"
-      }
-      date {
-        match => ["time", "ISO8601"]
-        timezone => "UTC"
-        target => "time"
-      }
-      ruby {
-        code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))'
-      }
-      if [RouterName] =~ /.+/ {
-        mutate {
-          replace => { "message" => "%{time} [%{DownstreamStatus}] - %{RouterName}: %{RequestMethod} %{RequestPath}" }
-#          replace => { "message" => %{[app][id]} "%{time} [%{DownstreamStatus}] - %{RouterName}: %{RequestMethod} %{RequestPath}" }
-        }
-      } else {
-        mutate {
-          replace => { "message" => "%{time} [%{DownstreamStatus}] - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
-#          replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
-        }
-      }
-      mutate {
-        remove_field => ["time", "msg"]
+    mutate {
+      remove_field => ["time"]
+    }
+#   } else if [service][type] == "nginx" {
+#     mutate {
+#       replace => { "message" => "%{[app][id]} %{[message]}" }
+#     }
+#   } else if [service][type] == "elasticksearch" {
+#     mutate {
+#       replace => { "message" => "%{[app][id]} %{[message]}" }
+#   }
+  } else if [service][type] == "kibana" {
+    mutate {
+#       replace => { "message" => "%{[app][id]} %{[message]}" }
+      add_field => {
+        "[event][kind]" => "event"
+        "[event][category]" => "log"
+        "[event][dataset]" => "kibana.log"
       }
     }
-  }
-  mutate {
-    add_field => {
-      "[ecs][version]" => "${STACK_VERSION}"
+  } else if [log][file][path] =~ /traefik/ {
+    kv {
+      remove_char_value => "\""
+    }
+    date {
+      match => ["time", "ISO8601"]
+      timezone => "UTC"
+      target => "time"
+    }
+    ruby {
+      code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))'
+    }
+    mutate { gsub => [ "msg", "\\n", " " ] }
+    mutate { uppercase => [ "level" ] }
+    mutate {
+      replace => { "message" => "%{time} [%{level}] %{msg}" }
+#       replace => { "message" => "%{[app][id]} %{time} [%{level}] %{msg}" }
+    }
+    mutate { lowercase => [ "level" ] }
+    mutate {
+      add_field => {
+        "[event][kind]" => "event"
+        "[event][category]" => "log"
+        "[event][dataset]" => "traefik.error"
+      }
+      remove_field => ["time"]
     }
   }
 }
 
 # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
-# https://www.elastic.co/guide/en/logstash/current/use-ingest-pipelines.html
 output {
   elasticsearch {
-    hosts => ["https://es01.${APP_NET}:9200"]
+    hosts => ["https://es01.${APP_HOST}.${APP_NET}:9200"]
     data_stream => true
     ssl => true
-    ssl_certificate_verification => false
     cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
     user => "${LOGSTASH_USERNAME}"
     password => "${LOGSTASH_PASSWORD}"
