--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -87,9 +87,10 @@ filter {
 # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
 output {
   elasticsearch {
-    hosts => ["https://es01.${APP_HOST}.${APP_NET}:9200"]
+    hosts => ["https://es01.${APP_NET}:9200"]
     data_stream => true
     ssl => true
+    ssl_certificate_verification => false
     cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
     user => "${LOGSTASH_USERNAME}"
     password => "${LOGSTASH_PASSWORD}"
