--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -42,11 +42,17 @@ filter {
 #   }
   } else if [service][type] == "kibana" {
     mutate {
-#       replace => { "message" => "%{[app][id]} %{[message]}" }
+#      replace => { "message" => "%{[app][id]} %{[message]}" }
       add_field => {
         "[event][kind]" => "event"
         "[event][category]" => "log"
-        "[event][dataset]" => "kibana.log"
+      }
+    }
+    if [event][dataset] !~ /.+/ {
+      mutate {
+        add_field => {
+          "[event][dataset]" => "kibana.log"
+        }
       }
     }
   } else if [log][file][path] =~ /traefik/ {
@@ -72,9 +78,15 @@ filter {
       add_field => {
         "[event][kind]" => "event"
         "[event][category]" => "log"
-        "[event][dataset]" => "traefik.error"
       }
       remove_field => ["time"]
+    }
+    if [event][dataset] !~ /.+/ {
+      mutate {
+        add_field => {
+          "[event][dataset]" => "traefik.error"
+        }
+      }
     }
   }
 }
