--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -6,18 +6,14 @@ input {
 }
 
 filter {
-  if [service][type] == "traefik" {
-    json {
-      source => "message"
-    }
+  if [service][type] == "traefik" and [fileset][name] == "access" {
+    json { source => "message" }
     date {
       match => ["time", "ISO8601"]
       timezone => "UTC"
       target => "time"
     }
-    ruby {
-      code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))'
-    }
+    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
     if [RouterName] =~ /.+/ {
       mutate {
         replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
@@ -29,9 +25,7 @@ filter {
 #         replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
       }
     }
-    mutate {
-      remove_field => ["time"]
-    }
+    mutate { remove_field => ["time"] }
 #   } else if [service][type] == "nginx" {
 #     mutate {
 #       replace => { "message" => "%{[app][id]} %{[message]}" }
@@ -41,32 +35,56 @@ filter {
 #       replace => { "message" => "%{[app][id]} %{[message]}" }
 #   }
   } else if [service][type] == "kibana" {
-    mutate {
-#      replace => { "message" => "%{[app][id]} %{[message]}" }
-      add_field => {
-        "[event][kind]" => "event"
-        "[event][category]" => "log"
-      }
-    }
-    if [event][dataset] !~ /.+/ {
-      mutate {
-        add_field => {
-          "[event][dataset]" => "kibana.log"
-        }
-      }
-    }
-  } else if [log][file][path] =~ /traefik/ {
-    kv {
-      remove_char_value => "\""
-    }
+    grok { match => { "message" => "%{TIMESTAMP_ISO8601:time} \[%{LOGLEVEL:level}%{SPACE}\]\[%{DATA:logger}\] %{GREEDYDATA:msg}" } }
+# remove milisec. for ruby from time:
     date {
       match => ["time", "ISO8601"]
       timezone => "UTC"
       target => "time"
     }
-    ruby {
-      code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))'
+    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
+    mutate { replace => { "message" => "%{time} [%{level}][%{logger}] %{msg}" } }
+#     mutate { replace => { "message" => "%{[app][id]} %{time} [%{level}][%{logger}] %{msg}" } }
+    mutate {
+      lowercase => [ "level" ]
+      remove_field => ["time", "msg"]
     }
+    mutate {
+      add_field => {
+        "[event][kind]" => "event"
+        "[event][category]" => "log"
+      }
+    }
+  } else if [service][type] == "elasticsearch" and [fileset][name] == "gc" {
+# https://github.com/elastic/logstash/blob/v1.4.0/patterns/grok-patterns    
+    grok { match => { "message" => "\[%{TIMESTAMP_ISO8601:time}\]\[%{NUMBER:num}\]\[%{DATA:gc}%{SPACE}\] %{GREEDYDATA:msg}" } }
+# remove milisec. for ruby from time:
+    date {
+      match => ["time", "ISO8601"]
+      timezone => "UTC"
+      target => "time"
+    }
+    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
+    mutate { replace => { "message" => "^%{time} [%{num}][%{gc}] %{msg}$" } }
+#     mutate { replace => { "message" => "%{[app][id]} %{time} [%{num}][%{gc}] %{msg}" } }
+    mutate {
+      lowercase => [ "level" ]
+      remove_field => ["time", "msg"]
+    }
+    mutate {
+      add_field => {
+        "[event][kind]" => "event"
+        "[event][category]" => "log"
+      }
+    }
+  } else if [log][file][path] =~ /traefik/ {
+    kv { remove_char_value => "\"" }
+    date {
+      match => ["time", "ISO8601"]
+      timezone => "UTC"
+      target => "time"
+    }
+    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
     mutate { gsub => [ "msg", "\\n", " " ] }
     mutate { uppercase => [ "level" ] }
     mutate {
@@ -83,9 +101,7 @@ filter {
     }
     if [event][dataset] !~ /.+/ {
       mutate {
-        add_field => {
-          "[event][dataset]" => "traefik.error"
-        }
+        add_field => { "[event][dataset]" => "traefik.error" }
       }
     }
   }
