--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -111,6 +111,8 @@ filter {
 output {
   elasticsearch {
     hosts => ["https://es01.${APP_NET}:9200"]
+# data stream is enabled by default
+#     data_stream => true
     data_stream => true
     ssl => true
     ssl_certificate_verification => false
