--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -23,6 +23,7 @@ filter {
       mutate {
         replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
 #         replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+#        add_field => { "RouterName" => "%{RequestAddr}" }
       }
     }
     mutate { remove_field => ["time"] }
