--- a/extras/nginx/default-http.conf
+++ b/extras/nginx/default-http.conf
@@ -5,8 +5,11 @@ server {
 
    location / {
        allow all;
-       access_log /dev/stderr;
-       error_log /dev/stderr;
+       # access_log /dev/stderr;
+       # error_log /dev/stderr;
+       access_log /var/log/nginx/access.log;
+       error_log /var/log/nginx/error.log;
        index index.html;
    }
+
 }
