--- a/compose/docker-work.yml
+++ b/compose/docker-work.yml
@@ -7,18 +7,28 @@ networks:
 
 services:
 
+#
+# === K - kibana alternate ===
+#
   kibana:
     image: nginx:alpine
+    deploy:
+      resources:
+        limits:
+          memory: ${MEM_LIMIT}
     restart: ${DOCKER_RESTART_POLICY}
     networks:
+      # for traefik:
       default:
-    container_name: "kibana"
+    container_name: "${APP_ID}-kibana"
+    hostname: "${KIBANA_HOST}"
     volumes:
       - ./extras/nginx/default-http.conf:/etc/nginx/conf.d/default.conf:ro
       - ./application/html:/var/www/html:ro
+      - ./logs/nginx:/var/log/nginx
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=${DOCKER_NETWORK}"
-      - "traefik.http.routers.work-public.rule=Host(`${KIBANA_HOST}`)"
+      - "traefik.http.routers.work-public.rule=Host(`${KIBANA_HOST}`, `work.${KIBANA_HOST}`)"
       - "traefik.http.routers.work-public.entrypoints=https"
       - "traefik.http.routers.work-public.tls=true"
