--- a/extras/nginx/default-elastic.conf
+++ b/extras/nginx/default-elastic.conf
@@ -35,7 +35,7 @@ server {
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header Upgrade $http_upgrade;
      # proxy_set_header Connection "upgrade";
-     proxy_pass https://es01.platel:9200/;
+     proxy_pass https://es01:9200/;
    }
 
 }
