--- a/compose/docker-work-kibana.yml
+++ b/compose/docker-work-kibana.yml
@@ -16,7 +16,7 @@
         ipv4_address: ${ES_NET}.20
         
     container_name: "${APP_ID}-work-kibana"
-    hostname: "work.${KIBANA_HOST}"
+    hostname: "work.kibana.${ELASTIC_NETWORK}"
     volumes:
       - ./extras/nginx/default-elastic.conf:/etc/nginx/conf.d/default.conf:ro
       - ./extras/nginx/htpasswd:/etc/nginx/conf.d/htpasswd
