--- a/extras/nginx/default-elastic.conf
+++ b/extras/nginx/default-elastic.conf
@@ -3,34 +3,38 @@ server {
    root /var/www/html;
    allow all;
 
+   location /nginx_status {
+       access_log /dev/stderr;
+       error_log /dev/stderr;
+       stub_status;
+   }
+
    location /work {
        allow all;
-       # access_log /dev/stderr;
-       # error_log /dev/stderr;
        access_log /var/log/nginx/access.log;
        error_log /var/log/nginx/error.log;
        index index.html;
    }
 
    location / {
-     auth_basic "Restricted - elasticsearch";
-     auth_basic_user_file /etc/nginx/conf.d/htpasswd/htpasswd;
-     access_log /var/log/nginx/access.log;
-     error_log /var/log/nginx/error.log;
-     proxy_connect_timeout       300;
-     proxy_send_timeout          300;
-     proxy_read_timeout          300;
-     send_timeout                300;
-     proxy_hide_header X-Frame-Options;
-     proxy_redirect off;
-     proxy_http_version 1.1;
-     proxy_ssl_session_reuse off;
-     proxy_set_header X-Forwarded-Proto "https";
-     proxy_set_header Host $host;
-     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-     proxy_set_header Upgrade $http_upgrade;
-     # proxy_set_header Connection "upgrade";
-     proxy_pass https://es01:9200/;
+       auth_basic "Restricted - elasticsearch";
+       auth_basic_user_file /etc/nginx/conf.d/htpasswd/htpasswd;
+       access_log /var/log/nginx/access.log;
+       error_log /var/log/nginx/error.log;
+       proxy_connect_timeout       300;
+       proxy_send_timeout          300;
+       proxy_read_timeout          300;
+       send_timeout                300;
+       proxy_hide_header X-Frame-Options;
+       proxy_redirect off;
+       proxy_http_version 1.1;
+       proxy_ssl_session_reuse off;
+       proxy_set_header X-Forwarded-Proto "https";
+       proxy_set_header Host $host;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header Upgrade $http_upgrade;
+       # proxy_set_header Connection "upgrade";
+       proxy_pass https://es01:9200/;
    }
 
 }
