--- a/extras/nginx/default-http.conf
+++ b/extras/nginx/default-http.conf
@@ -12,4 +12,16 @@ server {
        index index.html;
    }
 
+   location /downloads {
+      access_log /dev/stderr;
+      error_log /dev/stderr;
+      allow all;
+      autoindex on;
+      autoindex_exact_size on;
+      autoindex_format html;
+      autoindex_localtime on;
+      client_max_body_size 0;
+      create_full_put_path on;
+   }
+
 }
