--- a/extras/nginx/default-elastic.conf
+++ b/extras/nginx/default-elastic.conf
@@ -16,6 +16,18 @@ server {
        index index.html;
    }
 
+   location /downloads {
+       allow all;
+       access_log /var/log/nginx/access.log;
+       error_log /var/log/nginx/error.log;
+       autoindex on;
+       autoindex_exact_size on;
+       autoindex_format html;
+       autoindex_localtime on;
+       client_max_body_size 0;
+       create_full_put_path on;
+   }
+
    location / {
        auth_basic "Restricted - elasticsearch";
        auth_basic_user_file /etc/nginx/conf.d/htpasswd/htpasswd;
@@ -35,18 +47,6 @@ server {
        proxy_set_header Upgrade $http_upgrade;
        # proxy_set_header Connection "upgrade";
        proxy_pass https://es01:9200/;
-   }
-
-   location /downloads {
-      access_log /dev/stderr;
-      error_log /dev/stderr;
-      allow all;
-      autoindex on;
-      autoindex_exact_size on;
-      autoindex_format html;
-      autoindex_localtime on;
-      client_max_body_size 0;
-      create_full_put_path on;
    }
 
 }
