--- a/extras/nginx/default-http.conf
+++ b/extras/nginx/default-http.conf
@@ -3,6 +3,18 @@ server {
    root /var/www/html;
    allow all;
 
+   location /downloads {
+       access_log /var/log/nginx/access.log;
+       error_log /var/log/nginx/error.log;
+       allow all;
+       autoindex on;
+       autoindex_exact_size on;
+       autoindex_format html;
+       autoindex_localtime on;
+       client_max_body_size 0;
+       create_full_put_path on;
+   }
+
    location / {
        allow all;
        # access_log /dev/stderr;
@@ -10,18 +22,6 @@ server {
        access_log /var/log/nginx/access.log;
        error_log /var/log/nginx/error.log;
        index index.html;
-   }
-
-   location /downloads {
-      access_log /dev/stderr;
-      error_log /dev/stderr;
-      allow all;
-      autoindex on;
-      autoindex_exact_size on;
-      autoindex_format html;
-      autoindex_localtime on;
-      client_max_body_size 0;
-      create_full_put_path on;
    }
 
 }
