--- a/extras/nginx/default-elastic.conf
+++ b/extras/nginx/default-elastic.conf
@@ -16,7 +16,7 @@ server {
        index index.html;
    }
 
-   location /downloads {
+   location /work/downloads {
        allow all;
        access_log /var/log/nginx/access.log;
        error_log /var/log/nginx/error.log;
