--- a/extras/nginx/default-elastic.conf
+++ b/extras/nginx/default-elastic.conf
@@ -17,7 +17,9 @@ server {
    }
 
    location /work/downloads {
-       allow all;
+       auth_basic "Restricted - downloads";
+       auth_basic_user_file /etc/nginx/conf.d/htpasswd/htpasswd;
+       access_log /var/log/nginx/access.log;
        access_log /var/log/nginx/access.log;
        error_log /var/log/nginx/error.log;
        autoindex on;
