--- a/extras/nginx/default-http.conf
+++ b/extras/nginx/default-http.conf
@@ -6,7 +6,8 @@ server {
    location /downloads {
        access_log /var/log/nginx/access.log;
        error_log /var/log/nginx/error.log;
-       allow all;
+       auth_basic "Restricted - downloads";
+       auth_basic_user_file /etc/nginx/conf.d/htpasswd/htpasswd;
        autoindex on;
        autoindex_exact_size on;
        autoindex_format html;
