--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -36,7 +36,7 @@ filter {
 #       replace => { "message" => "%{[app][id]} %{[message]}" }
 #   }
   } else if [service][type] == "kibana" {
-    grok { match => { "message" => "%{TIMESTAMP_ISO8601:time} \[%{LOGLEVEL:level}%{SPACE}\]\[%{DATA:logger}\] %{GREEDYDATA:msg}" } }
+    grok { match => { "message" => "%{TIMESTAMP_ISO8601:time} \[%{LOGLEVEL:level}%{SPACE}\]\[%{DATA:logger}\] (?m)%{GREEDYDATA:msg}" } }
 # remove milisec. for ruby from time:
     date {
       match => ["time", "ISO8601"]
