--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -13,20 +13,23 @@ filter {
       timezone => "UTC"
       target => "time"
     }
-    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
-    if [RouterName] =~ /.+/ {
-      mutate {
-        replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
-#         replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
-      }
+    if "_grokparsefailure" in [tags] {
+      drop { }
     } else {
-      mutate {
-        replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
-#         replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
-#        add_field => { "RouterName" => "%{RequestAddr}" }
+      ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
+      if [RouterName] =~ /.+/ {
+        mutate {
+          replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
+#           replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
+        }
+      } else {
+        mutate {
+          replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+#           replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+        }
       }
+      mutate { remove_field => ["time"] }
     }
-    mutate { remove_field => ["time"] }
 #   } else if [service][type] == "nginx" {
 #     mutate {
 #       replace => { "message" => "%{[app][id]} %{[message]}" }
@@ -36,25 +39,29 @@ filter {
 #       replace => { "message" => "%{[app][id]} %{[message]}" }
 #   }
   } else if [service][type] == "kibana" {
-    grok { match => { "message" => "%{TIMESTAMP_ISO8601:time} \[%{LOGLEVEL:level}%{SPACE}\]\[%{DATA:logger}\] (?m)%{GREEDYDATA:msg}" } }
+# https://github.com/elastic/logstash/blob/v1.4.0/patterns/grok-patterns    
+    grok { match => { "message" => "(?m)%{TIMESTAMP_ISO8601:time} \[%{LOGLEVEL:level}%{SPACE}\]\[%{DATA:logger}\] %{GREEDYDATA:msg}" } }
 # remove milisec. for ruby from time:
     date {
       match => ["time", "ISO8601"]
       timezone => "UTC"
       target => "time"
     }
-    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
-    mutate { replace => { "message" => "%{time} [%{level}][%{logger}] %{msg}" } }
-#     mutate { replace => { "message" => "%{[app][id]} %{time} [%{level}][%{logger}] %{msg}" } }
-    mutate {
-      lowercase => [ "level" ]
-      remove_field => ["time", "msg"]
+    if "_grokparsefailure" in [tags] {
+      drop { }
+    } else {
+      ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
+      mutate { replace => { "message" => "%{[app][id]} %{time} [%{level}][%{logger}] %{msg}" } }
+      mutate {
+        lowercase => [ "level" ]
+      }
     }
     mutate {
       add_field => {
         "[event][kind]" => "event"
         "[event][category]" => "log"
       }
+      remove_field => ["msg", "time"]
     }
   } else if [service][type] == "elasticsearch" and [fileset][name] == "gc" {
 # https://github.com/elastic/logstash/blob/v1.4.0/patterns/grok-patterns    
@@ -65,18 +72,19 @@ filter {
       timezone => "UTC"
       target => "time"
     }
-    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
-    mutate { replace => { "message" => "^%{time} [%{num}][%{gc}] %{msg}$" } }
-#     mutate { replace => { "message" => "%{[app][id]} %{time} [%{num}][%{gc}] %{msg}" } }
-    mutate {
-      lowercase => [ "level" ]
-      remove_field => ["time", "msg"]
+    if "_grokparsefailure" in [tags] {
+      drop { }
+    } else {
+      ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
+      mutate { replace => { "message" => "^%{time} [%{num}][%{gc}] %{msg}$" } }
+#      mutate { replace => { "message" => "%{[app][id]} %{time} [%{num}][%{gc}] %{msg}" } }
     }
     mutate {
       add_field => {
         "[event][kind]" => "event"
         "[event][category]" => "log"
       }
+      remove_field => ["msg", "time"]
     }
   } else if [log][file][path] =~ /traefik/ {
     kv { remove_char_value => "\"" }
@@ -85,14 +93,17 @@ filter {
       timezone => "UTC"
       target => "time"
     }
-    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
-    mutate { gsub => [ "msg", "\\n", " " ] }
-    mutate { uppercase => [ "level" ] }
-    mutate {
-      replace => { "message" => "%{time} [%{level}] %{msg}" }
-#       replace => { "message" => "%{[app][id]} %{time} [%{level}] %{msg}" }
+    if "_grokparsefailure" in [tags] {
+      drop { }
+    } else {
+      ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
+      mutate { gsub => [ "msg", "\\n", " " ] }
+      mutate { uppercase => [ "level" ] }
+      mutate {
+        replace => { "message" => "%{time} [%{level}] %{msg}" }
+#        replace => { "message" => "%{[app][id]} %{time} [%{level}] %{msg}" }
+      mutate { lowercase => [ "level" ] }
     }
-    mutate { lowercase => [ "level" ] }
     mutate {
       add_field => {
         "[event][kind]" => "event"
