--- a/extras/logstash/pipelines.yml
+++ b/extras/logstash/pipelines.yml
@@ -6,11 +6,11 @@
   path.config: "/usr/share/logstash/pipeline/beat.conf"
   queue.type: persisted
   queue.max_bytes: 1gb    
-# - pipeline.id: syslog-access-pipeline
-#   path.config: "/usr/share/logstash/pipeline/syslog-access.conf"
-#   queue.type: persisted
-#   queue.max_bytes: 1gb    
-# - pipeline.id: syslog-error-pipeline
-#   path.config: "/usr/share/logstash/pipeline/syslog-error.conf"
-#   queue.type: persisted
-#   queue.max_bytes: 1gb    
+- pipeline.id: syslog-access-pipeline
+  path.config: "/usr/share/logstash/pipeline/syslog-access.conf"
+  queue.type: persisted
+  queue.max_bytes: 1gb    
+- pipeline.id: syslog-error-pipeline
+  path.config: "/usr/share/logstash/pipeline/syslog-error.conf"
+  queue.type: persisted
+  queue.max_bytes: 1gb    
