--- a/extras/nginx/default-elastic.conf
+++ b/extras/nginx/default-elastic.conf
@@ -9,14 +9,14 @@ server {
        stub_status;
    }
 
-   location /work {
+   location / {
        allow all;
        access_log /var/log/nginx/access.log;
        error_log /var/log/nginx/error.log;
        index index.html;
    }
 
-   location /work/downloads {
+   location /downloads {
        auth_basic "Restricted - downloads";
        auth_basic_user_file /etc/nginx/conf.d/htpasswd/htpasswd;
        access_log /var/log/nginx/access.log;
