--- a/extras/nginx/default-elastic.conf
+++ b/extras/nginx/default-elastic.conf
@@ -9,7 +9,7 @@ server {
        stub_status;
    }
 
-   location /downloads {
+   location /work/downloads {
        auth_basic "Restricted - downloads";
        auth_basic_user_file /etc/nginx/conf.d/htpasswd/htpasswd;
        access_log /var/log/nginx/access.log;
@@ -23,7 +23,7 @@ server {
        create_full_put_path on;
    }
 
-   location / {
+   location /work {
        allow all;
        access_log /var/log/nginx/access.log;
        error_log /var/log/nginx/error.log;
