--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -13,23 +13,19 @@ filter {
       timezone => "UTC"
       target => "time"
     }
-    if "_grokparsefailure" in [tags] {
-      drop { }
-    } else {
-      ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
-      if [RouterName] =~ /.+/ {
-        mutate {
-          replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
-#           replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
-        }
-      } else {
-        mutate {
-          replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
-#           replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
-        }
+    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
+    if [RouterName] =~ /.+/ {
+      mutate {
+        replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
+#        replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RouterName}: %{RequestMethod} %{RequestPath}" }
       }
-      mutate { remove_field => ["time"] }
+    } else {
+      mutate {
+        replace => { "message" => "%{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+#        replace => { "message" => "%{[app][id]} %{time} [%{DownstreamStatus}] %{ClientHost} - %{RequestAddr}: %{RequestMethod} %{RequestPath}" }
+      }
     }
+    mutate { remove_field => ["time"] }
 #   } else if [service][type] == "nginx" {
 #     mutate {
 #       replace => { "message" => "%{[app][id]} %{[message]}" }
@@ -40,7 +36,7 @@ filter {
 #   }
   } else if [service][type] == "kibana" {
 # https://github.com/elastic/logstash/blob/v1.4.0/patterns/grok-patterns    
-    grok { match => { "message" => "(?m)%{TIMESTAMP_ISO8601:time} \[%{LOGLEVEL:level}%{SPACE}\]\[%{DATA:logger}\] %{GREEDYDATA:msg}" } }
+    grok { match => { "message" => "^%{TIMESTAMP_ISO8601:time} \[%{LOGLEVEL:level}%{SPACE}\]\[%{DATA:logger}\] (?m)%{GREEDYDATA:msg}$" } }
 # remove milisec. for ruby from time:
     date {
       match => ["time", "ISO8601"]
@@ -72,13 +68,9 @@ filter {
       timezone => "UTC"
       target => "time"
     }
-    if "_grokparsefailure" in [tags] {
-      drop { }
-    } else {
-      ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
-      mutate { replace => { "message" => "^%{time} [%{num}][%{gc}] %{msg}$" } }
-#      mutate { replace => { "message" => "%{[app][id]} %{time} [%{num}][%{gc}] %{msg}" } }
-    }
+    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
+    mutate { replace => { "message" => "^%{time} [%{num}][%{gc}] %{msg}$" } }
+#    mutate { replace => { "message" => "%{[app][id]} %{time} [%{num}][%{gc}] %{msg}" } }
     mutate {
       add_field => {
         "[event][kind]" => "event"
@@ -93,18 +85,14 @@ filter {
       timezone => "UTC"
       target => "time"
     }
-    if "_grokparsefailure" in [tags] {
-      drop { }
-    } else {
-      ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
-      mutate { gsub => [ "msg", "\\n", " " ] }
-      mutate { uppercase => [ "level" ] }
-      mutate {
-        replace => { "message" => "%{time} [%{level}] %{msg}" }
-#        replace => { "message" => "%{[app][id]} %{time} [%{level}] %{msg}" }
-      }
-      mutate { lowercase => [ "level" ] }
+    ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
+    mutate { gsub => [ "msg", "\\n", " " ] }
+    mutate { uppercase => [ "level" ] }
+    mutate {
+    replace => { "message" => "%{time} [%{level}] %{msg}" }
+#    replace => { "message" => "%{[app][id]} %{time} [%{level}] %{msg}" }
     }
+    mutate { lowercase => [ "level" ] }
     mutate {
       add_field => {
         "[event][kind]" => "event"
