--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -26,14 +26,85 @@ filter {
       }
     }
     mutate { remove_field => ["time"] }
-#   } else if [service][type] == "nginx" {
-#     mutate {
-#       replace => { "message" => "%{[app][id]} %{[message]}" }
-#     }
-#   } else if [service][type] == "elasticksearch" {
-#     mutate {
-#       replace => { "message" => "%{[app][id]} %{[message]}" }
-#   }
+  } else if [service][type] == "nginx" and [fileset][name] == "access" {
+    grok {
+        match => { "message" => ["%{IPORHOST:ip} - %{DATA:user_name} \[%{HTTPDATE:time}\] \"%{WORD:http_method} %{DATA:url} HTTP/%{NUMBER:http_version}\" %{NUMBER:response_code} %{NUMBER:body_sent_bytes} \"%{DATA:referrer}\" \"%{DATA:user_agent}\""] }
+        remove_field => "message"
+    }
+    date {
+      match => ["time", "dd/MMM/YYYY:HH:mm:ss Z"]
+      target => "@timestamp"
+    }
+    geoip {
+      source => "ip"
+      target => "geoip"
+    }
+    if "_grokparsefailure" in [tags] {
+      drop {}
+    } else {
+      ruby { code =>'event.set("time", Time.at(event.get("@timestamp").to_f).strftime("%Y-%m-%d %H:%M"))' }
+      mutate { replace => { "message" => "%{time} [%{response_code}] '%{http_method} %{url} HTTP/%{http_version}' %{body_sent_bytes} '%{referrer}' '%{user_agent}'" } }
+#       mutate { replace => { "message" => "%{[app][id]} %{time} [%{response_code}] '%{http_method} %{url} HTTP/%{http_version}' %{body_sent_bytes} '%{referrer}' '%{user_agent}'" } }
+    }
+    mutate {
+      add_field => {
+        "[event][kind]" => "event"
+        "[event][category]" => "log"
+      }
+      remove_field => ["time"]
+  } else if [service][type] == "nginx" {
+    if [fileset][name] == "access" {
+      grok {
+        match => { "message" => ["%{IPORHOST:ip} - %{DATA:user_name} \[%{HTTPDATE:time}\] \"%{WORD:http_method} %{DATA:url} HTTP/%{NUMBER:http_version}\" %{NUMBER:response_code} %{NUMBER:body_sent_bytes} \"%{DATA:referrer}\" \"%{DATA:user_agent}\""] }
+        remove_field => "message"
+      }
+      date {
+        match => ["time", "dd/MMM/YYYY:HH:mm:ss Z"]
+        target => "@timestamp"
+      }
+      geoip {
+        source => "ip"
+        target => "geoip"
+      }
+      if "_grokparsefailure" in [tags] {
+        drop {}
+      } else {
+        ruby { code =>'event.set("time", Time.at(event.get("@timestamp").to_f).strftime("%Y-%m-%d %H:%M"))' }
+        mutate { replace => { "message" => "%{time} [%{response_code}] '%{http_method} %{url} HTTP/%{http_version}' %{body_sent_bytes} '%{referrer}' '%{user_agent}'" } }
+#         mutate { replace => { "message" => "%{[app][id]} %{time} [%{response_code}] '%{http_method} %{url} HTTP/%{http_version}' %{body_sent_bytes} '%{referrer}' '%{user_agent}'" } }
+      }
+      mutate {
+        add_field => {
+          "[event][kind]" => "event"
+          "[event][category]" => "log"
+        }
+        remove_field => ["time"]
+      }
+    } else if [fileset][name] == "error" {
+      grok {
+        match => { "message" => ["%{DATA:time} \[%{DATA:level}\] %{NUMBER:pid}#%{NUMBER:tid}: %{GREEDYDATA:msg}"] }
+      }
+      date {
+        match => ["time", "YYYY/MM/dd HH:mm:ss"]
+        target => "@timestamp"
+      }
+      if "_grokparsefailure" in [tags] {
+        drop {}
+      } else {
+        mutate { uppercase => [ "level" ] }
+        ruby { code =>'event.set("time", Time.at(event.get("@timestamp").to_f).strftime("%Y-%m-%d %H:%M"))' }
+        mutate { replace => { "message" => "%{time} [%{level}] %{msg}" } }
+#         mutate { replace => { "message" => "%{[app][id]} %{time} [%{level}] %{msg}" } }
+        mutate { lowercase => ["level"] }
+      }
+      mutate {
+        add_field => {
+          "[event][kind]" => "event"
+          "[event][category]" => "log"
+        }
+        remove_field => ["time", "msg"]
+      }
+    }
   } else if [service][type] == "kibana" {
 # https://github.com/elastic/logstash/blob/v1.4.0/patterns/grok-patterns    
     grok { match => { "message" => "^%{TIMESTAMP_ISO8601:time} \[%{LOGLEVEL:level}%{SPACE}\]\[%{DATA:logger}\] (?m)%{GREEDYDATA:msg}$" } }
@@ -44,13 +115,11 @@ filter {
       target => "time"
     }
     if "_grokparsefailure" in [tags] {
-      drop { }
+      drop {}
     } else {
       ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
       mutate { replace => { "message" => "%{[app][id]} %{time} [%{level}][%{logger}] %{msg}" } }
-      mutate {
-        lowercase => [ "level" ]
-      }
+      mutate { lowercase => ["level"] }
     }
     mutate {
       add_field => {
@@ -78,6 +147,9 @@ filter {
       }
       remove_field => ["msg", "time"]
     }
+# } else if [service][type] == "elasticksearch" {
+#   mutate {
+#     replace => { "message" => "%{[app][id]} %{message}" }
   } else if [log][file][path] =~ /traefik/ {
     kv { remove_char_value => "\"" }
     date {
@@ -92,12 +164,12 @@ filter {
     replace => { "message" => "%{time} [%{level}] %{msg}" }
 #    replace => { "message" => "%{[app][id]} %{time} [%{level}] %{msg}" }
     }
-    mutate { lowercase => [ "level" ] }
     mutate {
       add_field => {
         "[event][kind]" => "event"
         "[event][category]" => "log"
       }
+      lowercase => ["level"]
       remove_field => ["time", "msg"]
     }
     if [event][dataset] !~ /.+/ {
