--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -138,7 +138,7 @@ filter {
       target => "time"
     }
     ruby { code =>'event.set("time", Time.at(event.get("time").to_f).strftime("%Y-%m-%d %H:%M"))' }
-    mutate { replace => { "message" => "^%{time} [%{num}][%{gc}] %{msg}$" } }
+    mutate { replace => { "message" => "%{time} [%{num}][%{gc}] %{msg}" } }
 #    mutate { replace => { "message" => "%{[app][id]} %{time} [%{num}][%{gc}] %{msg}" } }
     mutate {
       add_field => {
